# flowide3d

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: main.yml
flowide3d/: __init__.py
flowide3d/frontend/: index.html  package-lock.json  package.json  vite.config.js
flowide3d/frontend/src/: CameraControls.ts  GridBox.ts  SimpleBox.ts  TextSprite.ts  main.ts  measurement.ts  scene.ts  style.css
