[tool.poetry]
name = "flowide3d"
version = "0.0.6"
description = ""
authors = ["FloWide Ltd. <contact@flowide.net>"]
readme = "README.md"
packages = [{include = "flowide3d"}]
include = ["flowide3d/frontend/dist/**/*"]



[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.38.0"
open3d = "0.17.0"
numpy = "^1.25.2"
laspy = "^2.5.4"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry_bumpversion.file."flowide3d/_version.py"]